Added 'how to run' instructions